[gd_scene load_steps=6 format=3 uid="uid://b3f5uesdnb1oh"]

[ext_resource type="Script" path="res://Escenas/Burbuja/burbuja.gd" id="1_e2rqe"]
[ext_resource type="Texture2D" uid="uid://d2eydgtglrgyt" path="res://icon.svg" id="2_cyelx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vo11m"]
radius = 48.0937

[sub_resource type="CircleShape2D" id="CircleShape2D_x5rro"]
radius = 58.0345

[sub_resource type="CircleShape2D" id="CircleShape2D_3s4w2"]
radius = 70.4557

[node name="Burbuja" type="CharacterBody2D"]
script = ExtResource("1_e2rqe")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-2, -5)
texture = ExtResource("2_cyelx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vo11m")

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_x5rro")

[node name="ContHabi" type="Timer" parent="."]

[node name="posProtec" type="Node2D" parent="."]

[node name="1" type="Marker2D" parent="posProtec"]
position = Vector2(-126, -114)

[node name="2" type="Marker2D" parent="posProtec"]
position = Vector2(-2, -146)

[node name="3" type="Marker2D" parent="posProtec"]
position = Vector2(116, -107)

[node name="escudo" type="Area2D" parent="."]
position = Vector2(0, 150)

[node name="CollisionShape2D" type="CollisionShape2D" parent="escudo"]
shape = SubResource("CircleShape2D_3s4w2")

[node name="Icon2" type="Sprite2D" parent="escudo"]
position = Vector2(1, 22)
texture = ExtResource("2_cyelx")

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="timeout" from="ContHabi" to="." method="_on_cont_habi_timeout"]
[connection signal="body_entered" from="escudo" to="." method="_on_escudo_body_entered"]
